--- a/app/src/main/res/layout/fragment_user_home.xml
+++ b/app/src/main/res/layout/fragment_user_home.xml
@@ -374,7 +374,7 @@
                                     android:layout_width="55dp"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="right"
-                                    android:layout_margin="5dp"
+                                    android:layout_marginRight="30dp"
                                     app:cardBackgroundColor="#DFA600"
                                     app:cardCornerRadius="10dp">
 
@@ -383,10 +383,9 @@
                                         android:layout_height="wrap_content"
                                         android:gravity="center"
                                         android:padding="2dp"
-                                        android:paddingLeft="100dp"
+                                        android:textAlignment="center"
                                         android:text="2 km"
                                         android:textColor="@color/white" />
-
                                 </androidx.cardview.widget.CardView>
 
                             </LinearLayout>
