Last update. Done

--- a/app/src/main/res/layout/activity_user_football_field_detail.xml
+++ b/app/src/main/res/layout/activity_user_football_field_detail.xml
@@ -114,7 +114,7 @@
 
                             </LinearLayout>
 
-                            <LinearLayout
+                            <androidx.coordinatorlayout.widget.CoordinatorLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="25dp"
@@ -123,21 +123,35 @@
                                 android:layout_marginBottom="5dp"
                                 android:orientation="horizontal">
 
-                                <ImageView
-                                    android:layout_width="20dp"
-                                    android:layout_height="20dp"
-                                    android:layout_marginRight="10dp"
-                                    android:gravity="right"
-                                    android:src="@drawable/multiple_user" />
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal">
+                                    <ImageView
+                                        android:layout_width="20dp"
+                                        android:layout_height="20dp"
+                                        android:layout_marginRight="10dp"
+                                        android:gravity="right"
+                                        android:src="@drawable/multiple_user" />
+
+                                    <TextView
+                                        android:id="@+id/txtType"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="5 people" />
+
+
+                                </LinearLayout>
+
 
                                 <TextView
-                                    android:id="@+id/txtType"
+                                    android:layout_gravity="right"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="5 people" />
+                                    android:drawableLeft="@drawable/star"
+                                    android:text=" 5"/>
+                            </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
-                            </LinearLayout>
 
                             <View
                                 android:id="@+id/divider"
