--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -40,7 +40,7 @@
                     android:textStyle="bold" />
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/imageDelete"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="4dp"
@@ -266,7 +266,7 @@
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_gravity="end"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="150dp"
         android:background="#FFFFFF"
         android:orientation="horizontal">
 
