--- a/app/src/main/res/layout/activity_promotion.xml
+++ b/app/src/main/res/layout/activity_promotion.xml
@@ -78,6 +78,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/infoBigFootballField"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="horizontal"
@@ -98,7 +99,7 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="100dp"
-                                android:orientation="horizontal">
+                                android:orientation="vertical">
                                 <androidx.coordinatorlayout.widget.CoordinatorLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content">
@@ -129,18 +130,21 @@
                                         android:textSize="18dp" />
                                 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-                                <TextView
+                                <LinearLayout
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginTop="5dp"
-                                    android:background="@drawable/button_instance"
-                                    android:paddingLeft="10dp"
-                                    android:paddingTop="3dp"
-                                    android:paddingRight="10dp"
-                                    android:paddingBottom="3dp"
-                                    android:text="2 km"
-                                    android:textColor="#ffffff"
-                                    android:textSize="18dp" />
+                                    android:orientation="horizontal">
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:src="@drawable/outline_location_on_24" />
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Thu Duc city,\nHCMC"
+                                        android:textColor="#000000"
+                                        android:textSize="18dp"/>
+                                </LinearLayout>
                             </LinearLayout>
                         </LinearLayout>
 
@@ -158,6 +162,7 @@
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:onClick="clickToViewDetailField"
                                     android:orientation="vertical">
 
                                     <androidx.cardview.widget.CardView
