--- a/app/src/main/res/layout/fragment_user_home.xml
+++ b/app/src/main/res/layout/fragment_user_home.xml
@@ -173,26 +173,22 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
+                        android:id="@+id/searchByMap"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="15dp"
                         android:gravity="center"
                         android:orientation="vertical">
-
                         <ImageButton
                             android:id="@+id/imgBtnNearMe"
                             style="@style/imageButtonHomeCus"
                             android:src="@drawable/map" />
-
                         <TextView
-
                             style="@style/TextDecription"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Near me"
-
                             />
-
                     </LinearLayout>
 
                     <LinearLayout
@@ -261,7 +257,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:backgroundTint="@color/black"
+                android:backgroundTint="#9DC030"
                 app:icon="@drawable/ic_baseline_calendar_today_24"
                 app:iconGravity="top"
                 app:iconSize="20dp"
@@ -286,7 +282,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:gravity="right"
-                android:text="View more >"
+                android:text="View more >>"
                 android:textColor="#5382AE"
                 android:onClick="clickToViewMorePromotion"/>
 
@@ -321,6 +317,7 @@
                         android:orientation="vertical">
 
                         <LinearLayout
+                            android:id="@+id/viewDetailBigField"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="horizontal">
